9/21/2023 5:30p
    Further modularized main.c
    Added config.h

9/21/2023 10:30a
    Added priority queue implementation using a binary heap (generated by ChatGPT)
    Refactored code to use Tile struct
    Refactored code to use data_structures directory

9/16/2023 1:30p
    Added fly
    Fixed bug where allocated memory not uninitialized to null

9/14/2023 10:15a
    Added n,s,e,w commands

9/12/2023 7:30p
    Added:
        World array
        Path location tracking
        Go north command
        Quit command
        No paths on world borders

9/12/2023 11:00a
    Added main.c and updated Makefile to compile to ./run

9/10/2023 4:30p
    Updated Makefile and debugged errors

9/7/2023 12:15p
    Abstracted queue data structure

8/30/2023 12:00p
    Implemented point generation logic (queue functions, Point structure, Queue structure)

8/31/2023 2:45p
    Added mountain border

9/1/2023 10:30p
    Added base path logic (with bugs)

9/2/2023 11:45p
    Added Pokimart and Pokicenter functionality
    Removed path logic bugs