@@ -1,4 +1,5 @@
 #include <stdlib.h>
+#include "../character.h"
 
 #ifndef TILE_H
 #define TILE_H
@@ -20,9 +21,10 @@ typedef enum {
 typedef struct {
     TileType type;
     __int8_t x, y;
+    TrainerType trainer;
 } Tile;
 
 Tile* create_tile(TileType type, __int8_t x, __int8_t y);
-char get_tile_char(TileType type);
+char get_tile_char(Tile* tile);
 
 #endif // TILE_H
