@@ -1,6 +1,6 @@
-#include "priority_queue.h"
 #include <stdlib.h>
 #include <stdio.h>
+#include "data_structures/priority_queue.h"
 
 /*
 Using binary heap implementation of a priority queue as generated by ChatGPT
